<resources>
    <string name="app_name">PCtoPE</string>
    <string name="preparing_for_firstboot">Checking the Permissions…</string>
    <string name="permissions_request">You need to grant the permissions.</string>
    <string name="ok">OK</string>
    <string name="choosing_alert">File Choosing</string>
    <string name="choosing_none">You chose nothing.</string>
    <string name="guide_welcome">Welcome to The Conversion Tutorial</string>
    <string name="label_guide">conversion guide</string>
    <string name="project_name">name</string>
    <string name="project_description">description</string>
    <string name="project_unnamed">Unnamed</string>
    <string name="project_icon_edit">Edit</string>
    <string name="project_icon_open">open</string>
    <string name="project_icon_title">icon</string>
    <string name="following_title">More Options</string>
    <string name="unzipping">Unzipping…</string>
    <string name="error">Error…</string>
    <string name="error_dialog">Whoops! We met some trouble:</string>
    <string name="close">close</string>
    <string name="copy">copy</string>
    <string name="not_pack">This is not a PC or PE texture pack.</string>
    <string name="deleting">deleting…</string>
    <string name="completed">Completed!</string>
    <string name="failed">Failed…</string>
    <string name="deleted_completed">Deleting is completed!</string>
    <string name="deteted_failed">Deleting is failed…</string>
    <string name="conversionact_edit_dialog_title">Select an item to continue…</string>
    <string name="cover">Use a image file to overwrite it.</string>
    <string name="edit_converactdialog">Transfer an installed application to edit.</string>
    <string name="unclickable_unzipping">You can\'t continue while unzipping.</string>
    <string name="do_final_step">Now we\'re doing final steps.</string>
    <string name="loading">Loading…</string>
    <string name="pack_icon_not_found">This may be a pack without an icon.You can change it.</string>
    <string name="android_nothing">Nothing here! Why not add one?</string>
    <string name="tutorial_welcome">Welcome to PCtoPE!</string>
    <string name="tutorial_wlcome_subtitle">We shall use an simple guide to tell you how to use this APP.</string>
    <string name="tutorial_step1">There\'s a \"+\" button at the bottom of the screen.</string>
    <string name="tutorial_step1_subtitle">Click it and choose a minecraft resource pack(.zip). Open the resource pack on the file manager.</string>
    <string name="tutorial_step2">Wait util it finished.</string>
    <string name="tutorial_step2_subtitle">Then, type some information you want and press the \">\" button.</string>
    <string name="tutorial_step3">Finially, you can see it on the list.</string>
    <string name="tutorial_step3_subtitle">Don\'t worry. We have things to do next.</string>
    <string name="tutorial_step4">Time for Minecraft!</string>
    <string name="tutorial_step4_subtitle">Click Settings>Global Resources, find the pack you want.Then click the \"+\" button.</string>
    <string name="tutorial_step5">Then you can see it at the top of the list.Restart MC.</string>
    <string name="tutorial_step5_subtitle">Don\'t open the save. Usually you need to restart minecraft to load the texture pack.</string>
    <string name="tutorial_hope">Hope You Enjoy!</string>
    <string name="tutorial_hope_subtitle">If you need help, you can call me on QQ(1095291434) or e-mail me.Thanks!</string>
    <string name="undo">UNDO</string>
    <string name="overwrite_title">Overwrite?</string>
    <string name="overwrite_content">A directory that has the same name is already here.Do you want to overwrite it?</string>
    <string name="overwrite">Overwrite</string>
    <string name="no">NO</string>
    <string name="skip">Skip</string>
    <string name="destination_exists">Destination exists!</string>
    <string name="broken_pc">Unusable PC Textures Pack</string>
    <string name="broken_pc_subtitle">Click the red icon on the right to learn more.</string>
    <string name="broken_pc_dialog_content">As you can see, this is a unusable PC texture pack.This kind of packs isn\'t able to be loaded on Minecraft PE.You can delete it by swiping to left or right, or click the Card View to try to fix.</string>
    <string name="info_card_title">Pack Detailed Information.</string>
    <string name="info_pack_in_mc_ver">Most Correct Version of MC PC :</string>
    <string name="info_pack_type">Pack Type :</string>
    <string name="type_before_1.9">Before 1.9</string>
    <string name="type_1.9_1.10" translatable="false">1.9-1.10.2</string>
    <string name="type_after_1.11">1.11 And After</string>
    <string name="type_fullPE">Full Minecraft PE textures pack</string>
    <string name="type_fullPC">Full Minecraft PC textures pack</string>
    <string name="type_brokenPE">Bug Minecraft PE textures pack</string>
    <string name="type_brokenPC">Bug Minecraft PC textures pack</string>
    <string name="info_file_not_exists">Unknown. This is PE pack or file doesn\'t exist.</string>
    <string name="resources_compression">Resources Compression</string>
    <string name="resources_compression_subtitle">This helps you compress image resource files to make runnable on Low Performance Devices.If you need to use, just click the card.</string>
    <string name="compress_to">Compress to…</string>
    <string name="confirm">Confirm</string>
    <string name="progress_compressing_title">Compressing…</string>
    <string name="progress_writing_json">Writing JSON…</string>
    <string name="compression_alert">You can\'t compress it to a higher resolution.</string>
    <string name="nav_textures_manager">Textures Manager</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_application">Application</string>
    <string name="nav_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="rebooting">Restarting application…</string>
    <string name="pref_language">Language</string>
    <string name="pref_lang_auto">Auto</string>
    <string name="about_create_by">Create By Zhufucomcom</string>
    <string name="about_gpl_license">Licensed under the GPL-v3 Open Source license.</string>
    <string name="about_made_in_china">Made In China</string>
    <string name="about_visit">Visit…</string>
    <string name="pref_drawer_title">Header Image of Drawer</string>
    <string name="pref_drawer_custom">Custom</string>
    <string name="pref_drawer_clear">Clear</string>
    <string name="compression_tip_title">What\'s this?</string>
    <string name="compression_tip_text">This can help you pack Minecraft Texture Packs into .mcpack files. They will be saved in</string>
    <string name="compressiom_tip_text2">.mcpack files can be open to import texture packs in Minecraft. Is a good way to use texture packs on special devices like IOS and Windows10.You can also use it on your Android device if you don\'t use External Storage.</string>
    <string name="compression_step_start">Let\'s begin.</string>
    <string name="understood">I understood.</string>
    <string name="crashes_toast_text">Whoops! We met some trouble!</string>
    <string name="user_bug_report_title">This crash has already been reported.</string>
    <string name="user_bug_report_subtitle">I will see what happened soon…</string>
    <string name="pack_icon_transition" translatable="false">pack_icon_transition</string>
    <string name="details_card_basic_info_title">Basic Information</string>
    <string name="details_card_basic_info_size">Textures Size</string>
    <string name="details_card_basic_info_location">Location</string>
    <string name="copied">Cpoied</string>
    <string name="icon_edit">Icon Edit</string>
    <string name="icon_edit_high_res_title">High Resolution</string>
    <string name="icon_edit_high_res_subtitle">It\'s meaningless to give a icon of hight resolution on Minecraft.Would you want to compress it?</string>
    <string name="thanks">Thanks</string>
    <string name="please_wait">Please wait…</string>
    <string name="operations">Operations</string>
    <string name="unable_to_get_name">Unable to get name</string>
    <string name="report_restart_app">Restart Application</string>
    <string name="crash_converstion_input_file_not_found">Chosen File Not Found! Try to use another File Manager.</string>
    <string name="folder">Folder</string>
    <string name="file">File</string>
    <string name="open_string">Open</string>
    <string name="close_string">Close</string>
    <string name="non_upper_level">You can\'t go back to the upper level.</string>
    <string name="logs">Logs</string>
    <string name="nothing">Nothing</string>
    <string name="use_of_log">Logs can help the developer make application better. If you have any problem, please contact me with these logs. Thanks!</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="calculating">Calculating…</string>
    <string name="add">Add</string>
    <string name="disable_msg">Disabled.</string>
    <string name="convert_into_resources_folder">Convert into resources folder.</string>
    <string name="convert_into_mcpack">Convert into Mcpack.</string>
    <string name="compressing_mcpack">Compressing into mcpack…</string>
    <string name="mcpack_compress">Compress to Mcpack</string>
    <string name="mcpack_compress_subtitle">This helps you adapt for other platforms like Windows10 and IOS. The \".mcpack\" file will be compressed in</string>
    <string name="mcpack_exists">The file is already found in</string>
    <string name="mcpack_delete">Delete the mcpack?</string>
    <string name="share">Share</string>
    <string name="json_editor">JSON Editor</string>
    <string name="guide_welcome_subtitle">Follow this and finish converting into PE.</string>
    <string name="input_name_descrption">Please Input The Name and Descritption You Want</string>
    <string name="input_name_descrption_subtitle">They both will be shown in Minecraft.</string>
    <string name="next">next</string>
    <string name="conversion_icon_text">This Is the Icon of the Pack</string>
    <string name="conversion_icon_text_subtitle">Click to overwrite.</string>
    <string name="tutorial_show_advenced_options">Advenced Options</string>
    <string name="compress_into_mcpack_at_the_same_time">Compress into Mcpack at the Same Time</string>
    <string name="done">Done!</string>
    <string name="pref_conversion_style">Conversion UI Style</string>
    <string name="click_to_jump">Click three times to jump through.</string>
    <string name="double_back_exit">Press again to exit.</string>
    <string name="mulit_select">Multi Select</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select All/None</string>
    <string name="select_inverse">Inverse</string>
    <string name="editor_tab_json">JSON</string>
    <string name="editor_tab_image">Image</string>
    <string name="needed">Needed</string>
    <string name="pctope_editor">PCtoPE Editor</string>
    <string name="extra">Extra</string>
    <string name="message_needed_json">This card is about JSONs that what is necessary. If a Minecraft Texture Pack doesn\'t have the following files, it can\'t be used or something will go wrong while using the pack. Click one of the following items to edit or create a JSON file.</string>
    <string name="json_object">JSON Object</string>
    <string name="json_array">JSON Array</string>
    <string name="subtitle_manifest">The Manifest file in PE pack. Maybe the most important thing in an Minecraft texture pack, including pack\'s name,description,uuid,version, and so on.</string>
    <string name="subtitle_blocks">A file that records the information of blocks. For example, is a block visible,what the texture of a block is, and so on.</string>
    <string name="title_manifest">Manifest</string>
    <string name="title_blocks">Blocks Infos</string>
</resources>