<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/title_activity_settings">
    <ListPreference
        android:title="@string/pref_language"
        android:entries="@array/pref_language"
        android:entryValues="@array/pref_language_values"
        android:dialogTitle="@string/pref_language"
        android:key="pref_language"/>
    <ListPreference
        android:title="@string/pref_conversion_style"
        android:entries="@array/pref_conversion_styles"
        android:entryValues="@array/pref_conversion_styles_values"
        android:dialogTitle="@string/pref_conversion_style"
        android:key="pref_conversion_style"/>
    <Preference
        android:title="@string/clear_cache"
        android:key="pref_clear_cache"
        android:enabled="false" />

    <PreferenceCategory
        android:title="@string/pref_drawer_title">
        <Preference
            android:title="@string/pref_drawer_custom"
            android:key="pref_drawer_button"/>
        <Preference
            android:title="@string/pref_drawer_clear"
            android:key="pref_drawer_clear"/>
    </PreferenceCategory>


</PreferenceScreen>