<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item android:title="@string/nav_textures_manager"
            android:icon="@drawable/view_agenda"
            android:id="@+id/nav_manager"/>
        <item android:title="@string/pctope_editor"
            android:icon="@drawable/ic_pctope_editor_icon"
            android:id="@+id/nav_pctope_editor"/>

    </group>
    <item android:title="@string/nav_application">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/settings"
                    android:title="@string/nav_settings" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/alert_circle"
                    android:title="@string/nav_about" />
                <item
                    android:id="@+id/nav_log"
                    android:icon="@drawable/android_debug_bridge"
                    android:title="@string/logs" />
            </group>

        </menu>
    </item>
</menu>