<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/text_margin">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:id="@+id/tutorial_icon_shower"
                android:background="?attr/selectableItemBackgroundBorderless"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/conversion_icon_text"
                android:text="@string/conversion_icon_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conversion_icon_text_subtitle"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tutorial_next"
                android:layout_gravity="end"
                app:backgroundTint="@color/colorAccent"
                app:rippleColor="@color/colorAccentPrimary"
                android:text="@string/next"
                android:textColor="@color/brown_primary"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tutorial_advenced_options_button"
                android:text="@string/tutorial_show_advenced_options"
                android:layout_marginStart="-8dp"
                app:rippleColor="@color/colorAccentPrimary"
                style="?attr/buttonBarButtonStyle"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tutorial_advenced_options_layout"
                android:orientation="vertical"
                android:visibility="invisible">

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tutorial_mcpack_switcher"
                    android:text="@string/compress_into_mcpack_at_the_same_time"
                    android:textSize="16sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_primary"
                    android:layout_margin="13dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tutorial_resource_compress"
                    android:orientation="vertical"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginTop="-13dp"
                    android:layout_marginBottom="13dp"
                    android:paddingTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resources_compression"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resources_compression_subtitle"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:visibility="invisible"
        android:id="@+id/tutorial_loading_blocker"
        android:orientation="vertical"
        android:gravity="center">

        <com.github.ybq.android.spinkit.SpinKitView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loadingAnimation"
            android:layout_margin="@dimen/text_margin_small"
            style="@style/SpinKitView.DoubleBounce"
            app:SpinKit_Color="@color/brown_primary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tutorial_loading_msg"
            android:gravity="center_horizontal"
            android:text="message"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>