<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zhufuc.pctope.Activities.JSONEditActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scroll_main">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.zhufuc.pctope.View.TitleCard
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card_needed"
                android:text="@string/needed"/>

            <com.zhufuc.pctope.View.TitleCard
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card_extra"
                android:text="@string/extra"/>
        </LinearLayout>
    </ScrollView>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler_view"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/loading_msg">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_wait"/>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
